fixed spacing on react-select elements

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -335,7 +335,7 @@ li {
 
 .user-details-box {
   display: inline-block;
-  width: 480px;
+  width: 350px;
   padding: 10px 20px;
   margin: 10px 20px;
   border: 2px solid black;
@@ -348,14 +348,14 @@ li {
 }
 
 .react-select {
-  padding: 5px 10px;
-  width: 170px;
+  padding: 10px 0;
+  width: auto;
   margin: 10px 10px;
   -webkit-appearance: button;
   -webkit-border-radius: 2px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-  -webkit-padding-end: 20px;
-  -webkit-padding-start: 2px;
+  -webkit-padding-end: 35px;
+  -webkit-padding-start: 20px;
   -webkit-user-select: none;
   background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
   background-position: 97% center;
